--- a/Portfolio Project/CSS/Styles.css
+++ b/Portfolio Project/CSS/Styles.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.5;
 
 }
@@ -26,13 +26,14 @@ a:hover {
   text-decoration: none;
 }
 h1 {
-  margin: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 80px;
   line-height: 1.5;
 }
 h2 {
   margin: 0px;
-  font-size: 45px;
+  font-size: 50px;
 }
 h1, h2 {
   font-family: 'Kalam', cursive;
@@ -46,6 +47,7 @@ h1, h2 {
 }
 h3 {
   margin-bottom: 0;
+  font-size: 25px;
 }
 .item-details h3 + p {
   font-style: italic;
@@ -60,6 +62,46 @@ h3 {
 .divider > section:last-of-type {
   border-bottom: none;
 }
+
+/* Navigation Bar
+----------------------------------*/
+nav.site-nav ul {
+  list-style-type: none;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  width: 100%;
+  border-bottom: 1px solid #bbb;
+  border-top: 1px solid #bbb;
+}
+nav.site-nav li {
+  float: left;
+  border-right: 1px solid #bbb;
+
+}
+nav.site-nav li:last-child {
+  border-right: none;
+}
+nav.site-nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+
+
+}
+nav.site-nav li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+
+}
+
 
 
 
@@ -95,16 +137,19 @@ header {
 }
 
 .project-item h3{
-  margin-top: 0;
+  margin-top: 20px;
 }
 
 
 /* Work Experience
 ----------------------------------*/
-.work-experience {
+.workexperience {
   background: #A1C6D7;
 }
 
+.workexperience h2 {
+  margin-bottom: -40px;
+}
 
 
 /* Education
@@ -117,8 +162,26 @@ header {
      padding-bottom: 100px;
   */
 }
+.education h3 {
+  margin-bottom: 15px;
+}
 /* .education p {  width: 60%; }*/
-
+.education a {
+  color: #0B0080;
+}
+.education section {
+  margin-bottom: 20px;
+}
+.education .marginlink {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.education .classesTaken {
+  margin-top: 20px;
+}
+.education .Achievements {
+  margin-top: 20px;
+}
 
 /* Contact information
 ----------------------------------*/
@@ -126,9 +189,20 @@ footer {
   background: #343434;
   color: #F7FFF7;
 }
+footer h2 {
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+footer ul {
+  margin: 20px;
+  margin-bottom: 20px;
+}
+
+ul.Contact li {
+  list-style-type: none;
+}
 
 
-/* Contact information
 ----------------------------------*/
 @media screen and (min-width: 750px) {
   header, footer {
